Fixing an issue where the previous editor was visible when the editor first loads

--- a/ui/src/main/resources/jcr_root/static/clientlibs/sling-cms-editor/editor.css
+++ b/ui/src/main/resources/jcr_root/static/clientlibs/sling-cms-editor/editor.css
@@ -85,6 +85,7 @@
 	overflow: hidden;
 	padding-bottom: 56.25%;
 	min-height: 500px;
+	background:url(./loader.gif) center center no-repeat;
 }
 
 .Sling-CMS__modal-frame-header {
